# envdiff

./: .gitignore  README.md  setup.cfg
envdiff/: __init__.py  annotator.py  archiver.py  audit_reporter.py  auditor.py  baseline.py  changelog.py  cli.py  cli_archive.py  cli_audit.py  cli_baseline.py  cli_diff_many.py  cli_drift.py  cli_export.py  cli_graph.py  cli_group.py  cli_health.py  cli_lint.py  cli_merge.py  cli_merge_plugin.py  cli_patch.py  cli_pin.py  cli_profile.py  cli_rename.py  cli_scan.py  cli_secrets.py  cli_snapshot.py  cli_summarize.py  cli_tag.py  cli_template.py  cli_validate.py  cli_watch.py  comparator.py  deduplicator.py  differ.py  differ_graph.py  differ_summary.py  drift.py  duplicates.py  exporter.py  (+30 more)
tests/: test_annotator.py  test_archiver.py  test_audit_reporter.py  test_auditor.py  test_baseline.py  test_changelog.py  test_cli.py  test_cli_graph.py  test_cli_lint.py  test_cli_merge.py  test_cli_watch.py  test_comparator.py  test_deduplicator.py  test_differ.py  test_differ_graph.py  test_differ_summary.py  test_drift.py  test_duplicates.py  test_exporter.py  test_filter.py  test_group_reporter.py  test_grouper.py  test_health.py  test_interpolator.py  test_linter.py  test_merger.py  test_normalizer.py  test_parser.py  test_patcher.py  test_pin_reporter.py  test_pinner.py  test_profiler.py  test_redactor.py  test_renamer.py  test_reporter.py  test_scorer.py  test_secrets_scanner.py  test_snapshot_reporter.py  test_snapshotter.py  test_sorter.py  (+6 more)
