[metadata]
name = envdiff
version = 0.1.0
description = Compare .env files across environments and flag missing or mismatched keys.
long_description = file: README.md
long_description_content_type = text/markdown
author = envdiff contributors
license = MIT
python_requires = >=3.8

[options]
packages = envdiff

[options.entry_points]
console_scripts =
    envdiff = envdiff.cli:main

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 99
