[metadata]
name = envdiff
version = 0.1.0
description = Compare .env files across environments and flag missing or mismatched keys.
long_description = file: README.md
long_description_content_type = text/markdown
author = envdiff contributors
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
python_requires = >=3.8

[options]
packages = envdiff

[options.entry_points]
console_scripts =
    envdiff = envdiff.cli:main

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 99
